Finally this is in the Changes button

--- a/PartsWebApp/PartsWebApp.csproj
+++ b/PartsWebApp/PartsWebApp.csproj
@@ -45,6 +45,13 @@
     <Content Include="AppIcon.png">
       <OpcRelationship>manifest-icon</OpcRelationship>
     </Content>
+    <Content Include="Elements.xml" />
+    <Content Include="Features\Feature1\Feature1.Template.xml">
+      <DependentUpon>Feature1.feature</DependentUpon>
+    </Content>
+    <Content Include="Package\Package.Template.xml">
+      <DependentUpon>Package.package</DependentUpon>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <AppManifestFile Include="AppManifest.xml">
@@ -61,6 +68,17 @@
       <RoleName>PartsWebAppWeb</RoleName>
       <ReferenceOutputAssembly>False</ReferenceOutputAssembly>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Features\Feature1\Feature1.feature">
+      <FeatureId>{aa5e3671-4980-4c14-94a8-2a911db77028}</FeatureId>
+    </None>
+    <None Include="Package\Package.package">
+      <PackageId>{7fed3d42-c935-4561-95dc-737e87f69c43}</PackageId>
+    </None>
+    <None Include="SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{d75ecbfe-f424-4d6b-8fd0-8a27b5033803}</SharePointProjectItemId>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
